--- a/index.html
+++ b/index.html
@@ -1,51 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Wedding</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Brooke & Nick - Home</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>Welcome to Our Wedding!</h1>
-            <p>We're so excited to share this special day with you.</p>
-        </div>
-    </header>
+  <!-- Header / Navigation -->
+  <header>
+    <div class="container">
+      <nav>
+        <ul>
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="ourstory.html">Our Story</a></li>
+          <li><a href="event.html">Event Details</a></li>
+          <li><a href="rsvp.html">RSVP</a></li>
+          <li><a href="weddingparty.html">Wedding Party</a></li>
+          <li><a href="registry.html">Registry</a></li>
+          <li><a href="photos.html">Photos/Videos</a></li>
+          <li><a href="travel.html">Travel & Accommodations</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-    <section id="details">
-        <div class="container">
-            <h2>Wedding Details</h2>
-            <p><strong>Date:</strong> June 20, 2025</p>
-            <p><strong>Location:</strong> The Grand Ballroom, XYZ Hotel</p>
-            <p><strong>Time:</strong> 4:00 PM</p>
-        </div>
-    </section>
+  <!-- Hero Section -->
+  <section id="hero">
+    <div class="container">
+      <h1>Welcome to Our Wedding</h1>
+      <p>Brooke &amp; Nick</p>
+      <img src="images/welcome-photo.jpg" alt="Brooke & Nick">
+    </div>
+  </section>
 
-    <section id="rsvp">
-        <div class="container">
-            <h2>RSVP</h2>
-            <p>Please let us know if you can join us!</p>
-            <form id="rsvp-form">
-                <label for="name">Your Name:</label>
-                <input type="text" id="name" name="name" required>
-                <label for="attending">Will you attend?</label>
-                <select id="attending" name="attending" required>
-                    <option value="yes">Yes</option>
-                    <option value="no">No</option>
-                </select>
-                <button type="submit">Submit</button>
-            </form>
-        </div>
-    </section>
-
-    <footer>
-        <div class="container">
-            <p>Follow us on our journey! <a href="#">Instagram</a> | <a href="#">Facebook</a></p>
-        </div>
-    </footer>
-
-    <script src="script.js"></script>
+  <!-- Footer -->
+  <footer>
+    <div class="container">
+      <p>&copy; 2025 Brooke &amp; Nick Wedding. All Rights Reserved.</p>
+    </div>
+  </footer>
+  <script src="script.js"></script>
 </body>
 </html>
+
