--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
   <!-- Header / Navigation -->
   <header>
-    <div class="container">
+    <div class="container header-container">
+      <h1 class="logo">Brooke & Nick</h1>
       <nav>
         <ul>
           <li><a href="index.html" class="active">Home</a></li>
@@ -31,7 +32,7 @@
     <div class="container">
       <h1>Welcome to Our Wedding</h1>
       <p>Brooke &amp; Nick</p>
-      <img src="images/welcome-photo.jpg" alt="Brooke & Nick">
+      <!-- Add a background image via CSS or an img tag if you prefer -->
     </div>
   </section>
 
